--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     - The freeCodeCamp Team
 
     -->
+    <br>
+    <h1>Hello, World</h1>
     <script  src="js/index.js"></script>
   </body>
 </html>
